--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="theme-color" content="#4A0000">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Attila Studios - Conquista Digital</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio - Attila Studios</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
@@ -24,7 +21,7 @@
                 <span class="logo-subtitle">Atila arrasaba tierras. Nosotros arrasamos límites.</span>
             </div>
             <ul class="nav-menu">
-                <li><a href="#home" class="nav-link active">Inicio</a></li>
+                <li><a href="index.html" class="nav-link">Inicio</a></li>
                 <li><a href="services.html" class="nav-link">Servicios</a></li>
                 <li><a href="team.html" class="nav-link">Equipo</a></li>
                 <li><a href="discord.html" class="nav-link">Discord</a></li>
@@ -115,6 +112,19 @@
         </div>
     </footer>
 
+    <script>
+    // Protección para asegurar que el cursor custom siempre se cree
+    window.addEventListener('DOMContentLoaded', function() {
+        try {
+            console.log('Intentando crear cursor custom...');
+            if (typeof createCustomCursor === 'function') {
+                createCustomCursor();
+            }
+        } catch (e) {
+            console.error('Error creando cursor custom:', e);
+        }
+    });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
