--- a/discord.html
+++ b/discord.html
@@ -75,11 +75,6 @@
                     <p>Acceso directo a nuestro equipo para resolver dudas y recibir ayuda.</p>
                 </div>
                 
-                <div class="discord-card">
-                    <div class="discord-icon">👥</div>
-                    <h3>Comunidad Activa</h3>
-                    <p>Conecta con otros guerreros digitales y forma alianzas poderosas.</p>
-                </div>
                 
                 <div class="discord-card">
                     <div class="discord-icon">🏆</div>
@@ -91,7 +86,7 @@
             <div class="discord-cta">
                 <h3>¿Listo para la batalla?</h3>
                 <p>Únete a nuestra fortaleza Discord</p>
-                <a href="#" class="btn btn-primary">Entrar al Discord</a>
+                <a href="https://discord.gg/3DbtkNVATP" class="btn btn-primary" target="_blank">Entrar al Discord</a>
             </div>
         </div>
     </section>
@@ -208,4 +203,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
