--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
                 <span class="word-2">SERVICIOS</span>
             </h1>
             <p class="hero-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Conoce mas de nuestras planificaciones de guerra.
             </p>
         </div>
     </section>
@@ -209,4 +209,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
